tests/invalid/foreign_type_visibility.err_exp3
foreign_type_visibility.m:022: Error: since the Mercury declaration of
foreign_type_visibility.m:022:   [38;5;87m`foreign'/0[39;49m [38;5;40mis in the implementation section,[39;49m
foreign_type_visibility.m:022:   any foreign type definition for it [38;5;203mmust be in[39;49m
foreign_type_visibility.m:022:   [38;5;203mthe implementation section as well.[39;49m
foreign_type_visibility.m:018:   That Mercury declaration is here.
foreign_type_visibility.m:026: Error: the type [38;5;87m`foreign2'/0[39;49m [38;5;203mhas no definition[39;49m
foreign_type_visibility.m:026:   that is valid when targeting C#; neither a
foreign_type_visibility.m:026:   Mercury definition, nor a
foreign_type_visibility.m:026:   `:- pragma foreign_type' declaration for C#.
foreign_type_visibility.m:033: Error: since some foreign language definition of
foreign_type_visibility.m:033:   [38;5;87m`foreign2'/0[39;49m is in the interface section, [38;5;203mall[39;49m
foreign_type_visibility.m:033:   [38;5;203mother foreign language definitions for it must[39;49m
foreign_type_visibility.m:033:   [38;5;203mbe in the interface section as well.[39;49m
foreign_type_visibility.m:026:   That foreign definition in the interface is
foreign_type_visibility.m:026:   here.
foreign_type_visibility.m:035: Error: since the Mercury definition of
foreign_type_visibility.m:035:   [38;5;87m`foreign3'/0[39;49m [38;5;40mis in the interface section,[39;49m any
foreign_type_visibility.m:035:   foreign type definition for it [38;5;203mmust be in the[39;49m
foreign_type_visibility.m:035:   [38;5;203minterface section as well.[39;49m
foreign_type_visibility.m:028:   That Mercury definition is here.
For more information, recompile with `-E'.
